--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(parseDatabaseFilename)
 export(parseTrace)
 export(printConfigData)
 export(recognitionRate)
+export(runCrossValidation)
 export(traceDatabaseToTimeseries)
 export(traceToTimeseries)
 export(tracesMatch)
